--- a/Magento_Catalog/templates/product/breadcrumbs.phtml
+++ b/Magento_Catalog/templates/product/breadcrumbs.phtml
@@ -7,14 +7,14 @@
 /** @var \Magento\Catalog\ViewModel\Product\Breadcrumbs $viewModel */
 $viewModel = $block->getData('viewModel');
 ?>
-<div class="breadcrumbs"></div>
+<div class="c-breadcrumbs c-breadcrumbs--catalog"></div>
 <?php
 $widget = $this->helper(\Magento\Framework\Json\Helper\Data::class)->jsonDecode($viewModel->getJsonConfigurationHtmlEscaped());
 $widgetOptions = $this->helper(\Magento\Framework\Json\Helper\Data::class)->jsonEncode($widget['breadcrumbs']);
 ?>
 <script type="text/x-magento-init">
     {
-        ".breadcrumbs": {
+        ".c-breadcrumbs": {
             "breadcrumbs": <?= /* @noEscape */ $widgetOptions ?>
         }
     }
