--- a/Magento_Catalog/templates/product/list/items.phtml
+++ b/Magento_Catalog/templates/product/list/items.phtml
@@ -156,25 +156,25 @@ switch ($type = $block->getType()) {
 
 <?php if ($type == 'related' || $type == 'upsell') :?>
 <?php if ($type == 'related') :?>
-<div class="block <?= $block->escapeHtmlAttr($class) ?>" data-mage-init='{"relatedProducts":{"relatedCheckbox":".related.checkbox"}}' data-limit="<?= $block->escapeHtmlAttr($limit) ?>" data-shuffle="<?= /* @noEscape */ $shuffle ?>">
+<div class="c-block c-block--<?= $block->escapeHtmlAttr($class) ?>" data-mage-init='{"relatedProducts":{"relatedCheckbox":".related.checkbox"}}' data-limit="<?= $block->escapeHtmlAttr($limit) ?>" data-shuffle="<?= /* @noEscape */ $shuffle ?>">
     <?php else :?>
-    <div class="block <?= $block->escapeHtmlAttr($class) ?>" data-mage-init='{"upsellProducts":{}}' data-limit="<?= $block->escapeHtmlAttr($limit) ?>" data-shuffle="<?= /* @noEscape */ $shuffle ?>">
+    <div class="c-block c-block--<?= $block->escapeHtmlAttr($class) ?>" data-mage-init='{"upsellProducts":{}}' data-limit="<?= $block->escapeHtmlAttr($limit) ?>" data-shuffle="<?= /* @noEscape */ $shuffle ?>">
         <?php endif; ?>
         <?php else :?>
-        <div class="block <?= $block->escapeHtmlAttr($class) ?>">
+        <div class="c-block c-block--<?= $block->escapeHtmlAttr($class) ?>">
             <?php endif; ?>
-            <div class="block-title title">
+            <div class="c-block__title">
                 <strong id="block-<?= $block->escapeHtmlAttr($class) ?>-heading" role="heading" aria-level="2"><?= $block->escapeHtml($title) ?></strong>
             </div>
-            <div class="block-content content" aria-labelledby="block-<?= $block->escapeHtmlAttr($class) ?>-heading">
+            <div class="c-block__content" aria-labelledby="block-<?= $block->escapeHtmlAttr($class) ?>-heading">
                 <?php if ($type == 'related' && $canItemsAddToCart) :?>
-                    <div class="block-actions">
+                    <div class="c-block__actions">
                         <?= $block->escapeHtml(__('Check items to add to the cart or')) ?>
                         <button type="button" class="action select" data-role="select-all"><span><?= $block->escapeHtml(__('select all')) ?></span></button>
                     </div>
                 <?php endif; ?>
                 <div class="products wrapper grid products-grid products-<?= $block->escapeHtmlAttr($type) ?>">
-                    <ol class="products list items product-items">
+                    <ol class="o-flex o-list-bare">
                         <?php foreach ($items as $_item) :?>
                             <?php $available = ''; ?>
                             <?php if (!$_item->isComposite() && $_item->isSaleable() && $type == 'related') :?>
@@ -183,9 +183,9 @@ switch ($type = $block->getType()) {
                                 <?php endif; ?>
                             <?php endif; ?>
                             <?php if ($type == 'related' || $type == 'upsell') :?>
-                                <li class="item product product-item" style="display: none;">
+                                <li class="o-flex__item o-list-bare__item item product product-item" style="display: none;">
                             <?php else :?>
-                                <li class="item product product-item">
+                                <li class="o-flex__item o-list-bare__item item product product-item">
                             <?php endif; ?>
                             <div class="product-item-info <?= /* @noEscape */ $available ?>">
                                 <?= /* @noEscape */ '<!-- ' . $image . '-->' ?>
