--- a/Magento_Catalog/templates/product/list/toolbar/amount.phtml
+++ b/Magento_Catalog/templates/product/list/toolbar/amount.phtml
@@ -11,26 +11,25 @@
  * @var $block \Magento\Catalog\Block\Product\ProductList\Toolbar
  */
 ?>
-<p class="toolbar-amount" id="toolbar-amount">
+<div class="c-toolbar__amount o-flex__item u-1/2" id="toolbar-amount">
     <?php if ($block->getLastPageNum() > 1) :?>
         <?= $block->escapeHtml(
             __(
                 'Items %1-%2 of %3',
-                '<span class="toolbar-number">' . $block->getFirstNum() . '</span>',
-                '<span class="toolbar-number">' . $block->getLastNum() . '</span>',
-                '<span class="toolbar-number">' . $block->getTotalNum() . '</span>'
-            ),
-            ['span']
+                $block->getFirstNum(),
+                $block->getLastNum(),
+                $block->getTotalNum()
+            )
         ) ?>
     <?php elseif ($block->getTotalNum() == 1) :?>
         <?= $block->escapeHtml(
-            __('%1 Item', '<span class="toolbar-number">' . $block->getTotalNum() . '</span>'),
+            __('%1 Item', $block->getTotalNum()),
             ['span']
         ) ?>
     <?php else :?>
         <?= $block->escapeHtml(
-            __('%1 Items', '<span class="toolbar-number">' . $block->getTotalNum() . '</span>'),
+            __('%1 Items', $block->getTotalNum()),
             ['span']
         ) ?>
     <?php endif; ?>
-</p>
+</div>
