--- a/Magento_Catalog/templates/product/list/toolbar/sorter.phtml
+++ b/Magento_Catalog/templates/product/list/toolbar/sorter.phtml
@@ -11,9 +11,9 @@
  * @var $block \Magento\Catalog\Block\Product\ProductList\Toolbar
  */
 ?>
-<div class="toolbar-sorter sorter">
-    <label class="sorter-label" for="sorter"><?= $block->escapeHtml(__('Sort By')) ?></label>
-    <select id="sorter" data-role="sorter" class="sorter-options">
+<div class="c-sortby o-flex__item u-1/2">
+    <label class="c-sortby__label" for="sorter"><?= $block->escapeHtml(__('Sort By')) ?></label>
+    <select id="sorter" data-role="sorter" class="c-sortby__options">
         <?php foreach ($block->getAvailableOrders() as $_key => $_order) :?>
             <option value="<?= $block->escapeHtmlAttr($_key) ?>"
                 <?php if ($block->isOrderCurrent($_key)) :?>
@@ -27,7 +27,7 @@
     <?php if ($block->getCurrentDirection() == 'desc') :?>
         <a title="<?= $block->escapeHtmlAttr(__('Set Ascending Direction')) ?>"
            href="#"
-           class="action sorter-action sort-desc"
+           class="c-sortby__action c-sortby__action--desc"
            data-role="direction-switcher"
            data-value="asc">
             <span><?= $block->escapeHtml(__('Set Ascending Direction')) ?></span>
@@ -35,7 +35,7 @@
     <?php else :?>
         <a title="<?= $block->escapeHtmlAttr(__('Set Descending Direction')) ?>"
            href="#"
-           class="action sorter-action sort-asc"
+           class="c-sortby__action c-sortby__action--asc"
            data-role="direction-switcher"
            data-value="desc">
             <span><?= $block->escapeHtml(__('Set Descending Direction')) ?></span>
