--- a/Magento_Catalog/templates/product/view/attribute.phtml
+++ b/Magento_Catalog/templates/product/view/attribute.phtml
@@ -46,10 +46,10 @@ if ($_attributeType && $_attributeType == 'text') {
 ?>
 
 <?php if ($_attributeValue) :?>
-<div class="product attribute <?= $block->escapeHtmlAttr($_className) ?>">
+<div class="c-product-attribute c-product-attribute--<?= $block->escapeHtmlAttr($_className) ?>">
     <?php if ($renderLabel) :?>
-        <strong class="type"><?= $block->escapeHtml($_attributeLabel) ?></strong>
+        <strong class="c-product-attribute__label"><?= $block->escapeHtml($_attributeLabel) ?></strong>
     <?php endif; ?>
-    <div class="value" <?= /* @noEscape */ $_attributeAddAttribute ?>><?= /* @noEscape */ $_attributeValue ?></div>
+    <div class="c-product-attribute__value" <?= /* @noEscape */ $_attributeAddAttribute ?>><?= /* @noEscape */ $_attributeValue ?></div>
 </div>
 <?php endif; ?>
