--- a/Magento_Theme/templates/html/bugreport.phtml
+++ b/Magento_Theme/templates/html/bugreport.phtml
@@ -4,8 +4,8 @@
  * See COPYING.txt for license details.
  */
 ?>
-<small class="bugs">
-    <span><?= $block->escapeHtml(__('Help Us Keep Magento Healthy')) ?></span>
+<small class="c-bugs">
+    <?= $block->escapeHtml(__('Help Us Keep Magento Healthy')) ?>
     <a href="http://www.magentocommerce.com/bug-tracking"
        target="_blank" title="<?= $block->escapeHtmlAttr(__('Report All Bugs')) ?>">
         <?= $block->escapeHtml(__('Report All Bugs')) ?>
