--- a/Magento_Theme/templates/html/copyright.phtml
+++ b/Magento_Theme/templates/html/copyright.phtml
@@ -4,6 +4,6 @@
  * See COPYING.txt for license details.
  */
 ?>
-<small class="copyright">
-    <span><?= $block->escapeHtml($block->getCopyright()) ?></span>
+<small class="c-copyright">
+    <?= $block->escapeHtml($block->getCopyright()) ?>
 </small>
