--- a/Magento_Theme/templates/html/skip.phtml
+++ b/Magento_Theme/templates/html/skip.phtml
@@ -7,9 +7,6 @@
 $target = $block->getTarget();
 $label = $block->getLabel();
 ?>
-<a class="action skip <?= $block->escapeHtmlAttr($target) ?>"
-   href="#<?= $block->escapeHtmlAttr($target) ?>">
-    <span>
-        <?= $block->escapeHtml($label) ?>
-    </span>
+<a class="u-hidden-visually <?= $block->escapeHtmlAttr($target) ?>" id="skiptocontent" href="#<?= $block->escapeHtmlAttr($target) ?>">
+   <?= $block->escapeHtml($label) ?>
 </a>
